--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Configurar Nodejs
         uses: actions/setup-node@v4
         with:
-          node-version: '22.x'
+          node-version: "22.x"
       - name: Instalar dependencias
         working-directory: ./calculadora
         run: |
@@ -19,4 +19,3 @@ jobs:
         working-directory: ./calculadora
         run: |
           npm run build
- 
