--- a/calculadora/.prettierrc
+++ b/calculadora/.prettierrc
@@ -1,4 +1,8 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "endOfLine": "lf",
+  "printWidth": 100,
+  "semi": true,
+  "tabWidth": 2
 }
